chenges in app.js and login.hbs

--- a/CRUD/views/login.hbs
+++ b/CRUD/views/login.hbs
@@ -34,8 +34,10 @@
             <button type="submit" class="btn btn-sm btn-primary"> Login</button>
             <a href="/signup" class="btn btn-sm btn-primary">Signup</a>
         </form>
-        {{#if msg}}
-        <p>{{msg}}</p>
+        
+
+        {{#if message}}
+        <h4 class="alert alert-danger mt-4">{{message}}</h4>
         {{/if}}
         
 
